<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SmartCity</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?    </string>
    <string name="login_with_google">Login with Google</string>
    <string name="login">Login</string>
    <string name="or_login_with">or login with</string>
    <string name="password">Password</string>
    <string name="register">Register.</string>
    <string name="enter_your_credentials_below">Enter your credentials below</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="sign_in">Sign In.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="registering">Registering...</string>
    <string name="signing_in">Signing in...</string>
    <string name="supporting_text">Enter the email address associated with your account and we\'ll send an email with instructions to reset your password.</string>
    <string name="submit">Submit</string>
    <string name="reset_password">Reset Password</string>
    <string name="edit_profile_settings">Edit Profile Settings</string>
    <string name="back">Back</string>
    <string name="profile">Profile</string>
    <string name="todo">TODO</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="personal_information">Personal Information</string>
    <string name="edit">Edit</string>
    <string name="save_changes">Save Changes</string>
    <string name="john_doe_example_com">john.doe@example.com</string>
    <string name="full_name">Full Name</string>
    <string name="john_doe">John Doe</string>
    <string name="_1234567890">+1234567890</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="good_morning">Good Morning,</string>
    <string name="good_afternoon">Good Afternoon,</string>
    <string name="good_noon">Good Noon,</string>
    <string name="good_evening">Good Evening,</string>
    <string name="preferences">Preferences</string>
    <string name="preferred_mode_of_transport">Preferred Mode of Transport</string>
    <string name="public_transport">Public Transport</string>
    <string name="car">Car</string>
    <string name="walking">Walking</string>
    <string name="motor">Motor</string>
    <string name="preferred_events_and_notifications">Preferred Events and Notifications</string>
    <string name="weather_advisories">Weather Advisories</string>
    <string name="popular_food_hubs_stalls">Popular Food Hubs/Stalls</string>
    <string name="health_and_fitness">Health and Fitness</string>
    <string name="festivals_and_concerts">Festivals and Concerts</string>
    <string name="traffic_alerts">Traffic Alerts</string>
    <string name="public_transits">Public Transits</string>
    <string name="setup_preferences">Setup Preferences</string>
    <string name="supporting_text_pref">Choose your preferred modes of transport and event types for tailored recommendations.</string>
    <string name="personalize_your_experience">Personalize Your\nExperience</string>
    <string name="mapbox_access_token" translatable="false" tools:ignore="UnusedResources">pk.eyJ1IjoiZWxnZW5pdW0iLCJhIjoiY2x6c2hqdjJ1MjkwYTJrcTdjZXYyMHEzcyJ9.tC0_B-TVQtekgrT0Ebb4jQ</string>
    <string name="notification_history">Notification History</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="create_application_feedback_rating">Create application feedback/rating</string>
    <string name="view_faq_s_from_users">View FAQ\'s from Users</string>
    <string name="contextual_suggestions">Contextual Suggestions</string>
    <string name="app_settings">App Settings</string>
    <string name="enable_events_notifications">Enable events notifications</string>
    <string name="enable_traffic_update_notifications">Enable traffic update notifications</string>
    <string name="exercise_reminder">Exercise reminder</string>
    <string name="turn_on_push_notifications">Turn on push notifications</string>
    <string name="new_event_reminders">New event reminders</string>
    <string name="app_feedback_rating">App Feedback/Rating</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="meal_reminder_suggestions">Meal reminder suggestions</string>
    <string name="title_activity_places">PlacesActivity</string>
    <string name="search_labels">You don’t have any recent searches. Begin searching to see your history here.</string>
    <string name="rating">%1$s star ratings</string>
    <string name="location_details_not_available">Location details not available</string>
    <string name="open">Opening Hours:\n%1$s</string>
    <string name="opening_hours_not_available">Opening Hours: Not Available</string>
    <string name="distance">%1$s km from location</string>
    <string name="_2f_km">%.2f km</string>
    <string name="distance_not_available">Distance from location: Not Available</string>
    <string name="distance_location_not_available">Distance from location: Location Not Available</string>
    <string name="distance_error">Distance from location: Error</string>
    <string name="an_imageview_for_the_photos_of_the_place">an imageview for the photos of the place</string>
    <string name="distance_from_location">%1$s away from location</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="title">Title</string>
    <string name="contact_number">Contact number</string>
    <string name="contact_email">Contact Email</string>
    <string name="save_contact">Save Contact</string>
    <string name="contact_name">Contact Name</string>
    <string name="manage_emergency_contacts">Manage Emergency Contacts</string>
    <string name="relation">relation</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="update">Update</string>
    <string name="temperature_format">%1$.1f°C</string>
    <string name="light">Light</string>
    <string name="moderate">Moderate</string>
    <string name="heavy">Heavy</string>
    <string name="current_speed_format">%1$.2f km/h</string>
    <string name="free_flow_speed_format">%1$.2f km/h</string>
    <string name="free_flow_travel_time_format">%1$d seconds</string>
    <string name="current_travel_time_format">%1$d seconds</string>
    <string name="closed">Closed</string>
    <string name="open_status">Open</string>
    <string name="no_available_opening_day_or_time_information">No available opening day or time information</string>
    <string name="empty" />
    <string name="others">Others: %1$s</string>
    <string name="address_not_found">Address not found</string>
    <string name="date_amp_time_nstarted"><![CDATA[Date & Time \nStarted]]></string>
    <string name="date_amp_time_nended"><![CDATA[Date & Time \nEnded]]></string>
    <string name="location_not_available">Location not available</string>
    <string name="no_data_available">No data available</string>
    <string name="your_location">Your location</string>
    <string name="no_places_found_please_try_again">No places found. Please try again.</string>
    <string name="set_start_time">Set Start Time</string>
    <string name="set_end_time">Set End Time</string>
    <string name="nearest_place_found">Nearest place found</string>
    <string name="here_s_the_nearest_place_found_within_your_location">Here\'s the nearest place found within your location.</string>

    <string-array name="feedback_type_options">
        <item>Select feedback type</item>
        <item>Bug Report</item>
        <item>Feature Suggestion</item>
        <item>General Feedback</item>
    </string-array>


    <string-array name="vehicle_type">
        <item>Car</item>
        <item>Motorcycle</item>
    </string-array>


</resources>