<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ForgotPasswordActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/baseline_arrow_back_24" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:layout_marginTop="40dp"
        android:textColor="@color/brand_color"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/supportingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/supporting_text"

        android:textColor="@color/gray"
        android:layout_marginTop="8dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintAnimationEnabled="true"
        app:boxStrokeColor="@color/brand_color"
        app:hintTextColor="@color/brand_color"
        app:helperTextTextColor="@color/brand_color"
        app:cursorColor="@color/secondary_color"
        android:layout_marginTop="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="@color/gray"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:cornerRadius="8dp"
        app:backgroundTint="@color/secondary_color"
        app:rippleColor="@color/brand_color"
        tools:ignore="VisualLintButtonSize"
        android:layout_marginTop="24dp"/>

</LinearLayout>
